syntax = "proto3";

package proto;

message ForemanCheckin {
    uint64 last_hunt_timestamp = 1;
    uint64 last_event_table_version = 2;
}
